# gl

./: .gitignore  CMakeLists.txt  README.md  run.sh
Inc/: Gl.hpp  IndexBuffer.hpp  Renderer.hpp  Shader.hpp  Utils.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp
Res/shaders/: basic.glsl
Src/: IndexBuffer.cpp  Main.cpp  Renderer.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
